Work on 2021/desklight and adding a couple h-entry tags to generate.pl

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
+    "autoload": {
+        "psr-4": {"desklight\\": "2021/desklight/"}
+    },
     "require": {
         "cboden/ratchet": "^0.4.3",
         "indieweb/mention-client": "^1.2",
