--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,5 @@
 RewriteEngine On
+RewriteRule ^\d{4}/\d{2}/([0-9]+)(/$|$) /entry.php?id=$1 [L]
 RewriteRule ^kind/article /entry.php?type=1 [L]
 RewriteRule ^kind/note /entry.php?type=2 [L]
 RewriteRule ^kind/photo /entry.php?type=3 [L]
