Adding file posts, early support for comments

--- a/.htaccess
+++ b/.htaccess
@@ -10,4 +10,5 @@ RewriteRule ^kind/(like|heart) /entry.php?type=6 [L]
 RewriteRule ^kind/(reply|replie) /entry.php?type=7 [L]
 RewriteRule ^kind/(repost|re-post) /entry.php?type=8 [L]
 RewriteRule ^kind/rsvp /entry.php?type=9 [L]
+RewriteRule ^kind/file /entry.php?type=10 [L]
 RewriteRule ^kind /entry.php
