--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
     "autoload": {
-        "psr-4": {"desklight\\": "2021/desklight/"}
+        "psr-4": {"webmentions\\": "webmentions"}
     },
     "require": {
         "cboden/ratchet": "^0.4.3",
         "indieweb/mention-client": "^1.2",
         "masterminds/html5": "^2.7",
-        "react/zmq": "^0.4.0"
+        "react/zmq": "^0.4.0",
+        "mf2/mf2": "^0.4.6"
     }
 }
