--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "indieweb/mention-client": "^1.2",
         "masterminds/html5": "^2.7",
         "react/zmq": "^0.4.0",
-        "mf2/mf2": "^0.4.6"
+        "mf2/mf2": "^0.4.6",
+        "p3k/micropub": "^0.0.3"
     }
 }
