--- a/.htaccess
+++ b/.htaccess
@@ -13,3 +13,4 @@ RewriteRule ^kind/rsvp /entry.php?type=9 [L]
 RewriteRule ^kind/file /entry.php?type=10 [L]
 RewriteRule ^kind /entry.php
 RewriteRule ^now$ /now.html
+RewriteRule ^webmention$ /indieweb/webmention.php
