--- a/.htaccess
+++ b/.htaccess
@@ -12,7 +12,11 @@ RewriteRule ^kind/(repost|re-post) /entry.php?type=8 [L]
 RewriteRule ^kind/rsvp /entry.php?type=9 [L]
 RewriteRule ^kind/file /entry.php?type=10 [L]
 RewriteRule ^kind /entry.php
-RewriteRule ^rss$ /feed.php?type=rss
+RewriteRule ^h-feed$ /feeds/h-feed.php
+RewriteRule ^feeds/h-feed /feeds/h-feed.php
+RewriteRule ^rss$ /feeds/rss.php
 RewriteRule ^feeds/rss/v1.rss /feeds/rss.php
+ReWriteRule ^atom$ /feeds/atom.php
+RewriteRule ^feeds/atom/v1.atom /feeds/atom.php
 RewriteRule ^now$ /now.html
 RewriteRule ^webmention$ /indieweb/webmention.php
