minor fixes for watch posts - /kind/watch only shows watch posts - more even padding around movie posters

--- a/.htaccess
+++ b/.htaccess
@@ -11,6 +11,7 @@ RewriteRule ^kind/(reply|replie) /entry.php?type=7 [L]
 RewriteRule ^kind/(repost|re-post) /entry.php?type=8 [L]
 RewriteRule ^kind/rsvp /entry.php?type=9 [L]
 RewriteRule ^kind/file /entry.php?type=10 [L]
+RewriteRule ^kind/watch /entry.php?type=11 [L]
 RewriteRule ^kind /entry.php
 RewriteRule ^h-feed$ /feeds/h-feed.php
 RewriteRule ^feeds/h-feed /feeds/h-feed.php
