adding /2019/printkey as vendored to .gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 scifair/** linguist-vendored
 2018/cios/** linguist-vendored
+2019/printkey/** linguist-vendored
 2020/geol110-inscriptions-notebook.html linguist-vendored
